small refactorings + toggle player list + better qmp (and less buggy on desktop)

--- a/QuickMenuPersistence/QuickMenuPersistence.csproj
+++ b/QuickMenuPersistence/QuickMenuPersistence.csproj
@@ -71,6 +71,10 @@
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\..\Programs\Steam\steamapps\common\VRChat\MelonLoader\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.InputLegacyModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Programs\Steam\steamapps\common\VRChat\MelonLoader\Managed\UnityEngine.InputLegacyModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.PhysicsModule">
       <HintPath>..\..\Programs\Steam\steamapps\common\VRChat\MelonLoader\Managed\UnityEngine.PhysicsModule.dll</HintPath>
     </Reference>
